--- a/Todo-List/src/index.css
+++ b/Todo-List/src/index.css
@@ -68,3 +68,8 @@ button:focus-visible {
 } */
 
 @import "tailwindcss";
+
+body{
+    --tw-bg-opacity: 1;
+    background-color: rgb(226, 223, 239)
+}
